--- a/locale/zh_CN/LC_MESSAGES/deploy/index.po
+++ b/locale/zh_CN/LC_MESSAGES/deploy/index.po
@@ -19,7 +19,7 @@ msgstr ""
 
 #: ../../deploy/index.rst:21
 msgid "Deploy and Integration"
-msgstr ""
+msgstr "部署与集成"
 
 #: ../../deploy/index.rst:23
 msgid ""
