--- a/locale/zh_CN/LC_MESSAGES/langref/index.po
+++ b/locale/zh_CN/LC_MESSAGES/langref/index.po
@@ -19,7 +19,7 @@ msgstr ""
 
 #: ../../langref/index.rst:19
 msgid "Language Reference"
-msgstr ""
+msgstr "语言参考"
 
 #: ../../langref/index.rst:20
 msgid ""
