--- a/locale/kr/LC_MESSAGES/dev/relay_bring_your_own_codegen.po
+++ b/locale/kr/LC_MESSAGES/dev/relay_bring_your_own_codegen.po
@@ -266,8 +266,8 @@ msgid ""
 " three functions in this codegen class to make it work."
 msgstr ""
 "``CodegenC`` 클래스는 두 클래스를 상속하는데: ``ExprVisitor`` 는 서브그래프를 "
-"횡단하며 필요한 정보를 모으고 ``gcc_0_`` 와 같은 서브그래프 함수를 생성하는 "
-"기능을 제공하고; ``CodegenCBase`` 는 상기 예제의 ``gcc_0`` 와 같은 래퍼 함수를 "
+"순회하며 필요한 정보를 모으고 ``gcc_0_`` 와 같은 서브그래프 함수를 생성하는 "
+"기능을 제공하고; ``CodegenCBase`` 는 상기 예제의 ``gcc_0`` 와 같은 포장 함수를 "
 "생성하기 위한 유틸리티와 기능을 제공합니다. "
 "보다시피 codegen 클래스를 작동하게 만드려면 세 함수만 구현하면 됩니다. "
 
@@ -285,7 +285,7 @@ msgid ""
 "as follows."
 msgstr ""
 "먼저 ``VisitExpr_(const CallNode* call)`` 를 구현합니다. 이 함수는 서브그래프를 "
-"횡단하는 동안 모든 호출 노드를 방문합니다. 각 호출 노드는 당신의 하드웨어에 위임하고 "
+"순회하는 동안 모든 호출 노드를 방문합니다. 각 호출 노드는 당신의 하드웨어에 위임하고 "
 "싶은 연산자들을 담고 있습니다. 따라서 위상학적 순위에 따라 그에 상응하는 C 코드를 적합한 "
 "연산자들로 생성해야 합니다. "
 "이 함수를 다음과 같이 단계별로 구현해 봅시다."
@@ -319,7 +319,7 @@ msgid ""
 "``VisitExpr_(const CallNode* call)`` also follow this concept."
 msgstr ""
 "보다시피, 생성된 코드를 클래스 멤버 변수 ``func_decl_`` 에 푸쉬(push_back) 합니다. "
-"이는 전체 서브그래프를 횡단하고 나면 필요한 함수 선언은 모두 수집이 끝나고, 남은 일은 "
+"이는 전체 서브그래프를 순회하고 나면 필요한 함수 선언은 모두 수집이 끝나고, 남은 일은 "
 "GCC에 의해 컴파일되도록 하는 것 뿐이라는 의미입니다. "
 "``VisitExpr_(const CallNode* call)`` 의 나머지 구현도 이러한 컨셉을 따릅니다. "
 
