additional translation for relay-add-pass
Signed-off-by: zotanika <zotanika@gmail.com>

--- a/locale/kr/LC_MESSAGES/dev/relay_add_pass.po
+++ b/locale/kr/LC_MESSAGES/dev/relay_add_pass.po
@@ -369,10 +369,10 @@ msgid ""
 msgstr ""
 "``CallNode`` 의 경우, 먼저 호출을 방문하기 위해 ``ExprMutator`` 의 ``VisitExpr_`` 를 "
 "사용하는데, 이는 호출에 연관된 모든 필드를 상수-폴드합니다. "
-"``VisitExpr`` 대신 ``ExprMutator::VisitExpr_`` 를 사용하는 이유는 vtable을 우회하기 "
-"싶어서이고(무한 루프 회피를 위해) ``ExprMutator`` 에 의해 제공되는 기본 구현을 활용하기 위함입니다. "
-"그 다음 모든 인자가 상수( ``ConstantChecker`` 를 이용해)인지 여부로 호출을 평가합니다. "
-"호출의 평가는 하나의 **값** 으로 산출되고, 헬퍼 메서드 ``ValueToExpr`` 를 이용해 평가된 표현식을 "
+"``VisitExpr`` 대신 ``ExprMutator::VisitExpr_`` 를 사용하는 이유는 vtable을 우회하길 원하며"
+"(무한 루프 회피를 위해) ``ExprMutator`` 에 의해 제공되는 기본 구현을 활용하기 위함입니다. "
+"그 다음, 모든 인자가 상수( ``ConstantChecker`` 를 이용해)로만 이루어진 호출인지를 평가합니다. "
+"호출의 평가는 하나의 **값** 으로 산출되며, 헬퍼 메서드 ``ValueToExpr`` 를 이용해 평가된 표현식을 "
 "AST로 되돌려 보냅니다. "
 
 #: ../../dev/relay_add_pass.rst:328
@@ -429,15 +429,12 @@ msgid ""
 "common dependency; others may depend on the program's being in A-normal "
 "form, via the ``ToANormalForm`` pass."
 msgstr ""
-"The function ``CreateFunctionPass`` allows for registering the "
-"optimization level of the pass (in this case, 2), which can be used to "
-"group together passes based on their general utility, a name for the "
-"pass, and any dependencies for the pass. A pass's dependencies are given "
-"as a list of any passes whose results are necessary to be able to run the"
-" current pass. ``FoldConstant`` does not have any dependencies, but many "
-"Relay passes do depend on having type information, so ``InferType`` is a "
-"common dependency; others may depend on the program's being in A-normal "
-"form, via the ``ToANormalForm`` pass."
+"``CreateFunctionPass`` 함수는 패스의 최적화 수준(이 경우엔, 2)을 등록할 수 있도록 해 줍니다. "
+"이는 패스의 일반적 기능성, 명칭, 혹은 기타 의존성들에 따라 패스들을 한데 묶어 그룹화하기 위해 사용됩니다. "
+"어떤 패스의 의존성은, 현재의 패스를 실행하기 위해 필요한 결과물을 제공하는 모든 패스들의 리스트로 주어집니다. "
+"``FoldConstant`` 는 별다른 의존성이 없지만, 대부분의 Relay 패스들은 타입 정보 보유를 전제로 하는 "
+"경우가 많아서, ``InferType`` 에 흔히 의존합니다; 또한 프로그램이 A-일반형태(ANF) 임을 전제로 하는 상당수의 "
+"패스들은 ``ToANormalForm`` 에 의존합니다."
 
 #: ../../dev/relay_add_pass.rst:371
 msgid ""
@@ -446,10 +443,8 @@ msgid ""
 "need this information but other passes may reference their "
 "``PassContext`` objects."
 msgstr ""
-"Note that the ``PassContext`` object contains information a pass uses for"
-" error reporting and configuration options; ``FoldConstant`` does not "
-"need this information but other passes may reference their "
-"``PassContext`` objects."
+"``PassContext`` 객체는 패스가 오류 보고에 사용하는 정보과 설정 옵션들을 담고 있다는 점에 유의하세요; "
+"``FoldConstant`` 는 이 정보가 불필요하지만, 다른 패스들은 스스로에 대한 ``PassContext`` 객체를 참조할 수도 있습니다."
 
 #: ../../dev/relay_add_pass.rst:375
 msgid ""
@@ -457,9 +452,8 @@ msgid ""
 "good idea to also add a Python binding for the pass, as in this code "
 "snippet:"
 msgstr ""
-"The pass can now be invoked via the pass infrastructure, though it's a "
-"good idea to also add a Python binding for the pass, as in this code "
-"snippet:"
+"패스는 이제 패스 인프라스트럭쳐를 통해 불러낼 수 있습니다. 그렇지만 아래의 코드 조각에서처럼 "
+"패스에 대한 파이썬 바인딩을 같이 추가해 두는 것은 여전히 좋은 생각입니다:"
 
 #: ../../dev/relay_add_pass.rst:383
 msgid ""
@@ -470,12 +464,11 @@ msgid ""
 "applies both the ``FoldConstant`` and ``ToANormalForm`` passes (one after"
 " the other) to each function in ``mod`` and obtains a new module."
 msgstr ""
-"Once ``Pass`` objects are defined in the above fashion, they can be "
-"invoked using the pass infrastructure's ``Sequential`` construct, which "
-"takes a list of passes and applies them in sequence to a Relay module, "
-"obtaining a transformed module as a result. For example, the below code "
-"applies both the ``FoldConstant`` and ``ToANormalForm`` passes (one after"
-" the other) to each function in ``mod`` and obtains a new module."
+"위와 같은 형식으로 ``Pass`` 객체가 일단 정의되면, 패스의 리스트를 받아 Relay 모듈에 순서대로 "
+"적용하고 변형된 모듈을 결과로 취하는 패스 인프라스트럭쳐의 ``Sequential`` 구축을 통해 불러낼 수 "
+"있게 됩니다. "
+"예컨대, 아래의 코드는 ``mod`` 내의 각 함수에 ``FoldConstant`` 와 ``ToANormalForm`` 의 두 "
+"패스를 순서대로 적용해 새로운 모듈을 얻습니다. "
 
 #: ../../dev/relay_add_pass.rst:397
 msgid ""
@@ -484,8 +477,7 @@ msgid ""
 ":ref:`pass-infra`. Relay's standard passes are listed in "
 "`include/tvm/relay/transform.h`_ and implemented in `src/relay/pass/`_."
 msgstr ""
-"More detail about registration can be found in :ref:`tvm-runtime-system` "
-"and more information about the pass manager interface can be found in "
-":ref:`pass-infra`. Relay's standard passes are listed in "
-"`include/tvm/relay/transform.h`_ and implemented in `src/relay/pass/`_."
+"등록에 관한 더 자세한 내용은 :ref:`tvm-runtime-system` 에서 확인할 수 있으며, "
+"패스 매니저 인터페이스에 대한 추가 정보는 :ref:`pass-infra` 에서 찾아볼 수 있습니다. "
+"Relay의 표준 패스들은 `include/tvm/relay/transform.h`_ 에 나열되어 있으며 `src/relay/pass/`_ 내에 구현됩니다. "
 
