--- a/locale/kr/LC_MESSAGES/dev/relay_bring_your_own_codegen.po
+++ b/locale/kr/LC_MESSAGES/dev/relay_bring_your_own_codegen.po
@@ -496,9 +496,10 @@ msgid ""
 "``JitImpl``, to generate the function. For example, we can invoke "
 "``JitImpl`` as follows:"
 msgstr ""
-"이 codegen 클래스의 마지막 부분은 서브그래프를 위한 C 함수를 출력하고 우리가 함수 몸체로서 "
+"이 codegen 클래스의 마지막 부분은 서브그래프를 위한 C 함수를 내보내고 우리가 함수 몸체로서 "
 "막 생성한 C 코드를 활용하는 ``JIT`` 함수입니다. 이전 섹션에서 우리가 생성한 서브그래프 "
-"함수에 더해 TVM 런타임이 데이터를 주고 받기 위해 통합 인자
+"함수에 더해, TVM 런타임이 데이터를 불러오고 전달하도록 하기 위한 통합 인자를 다루는 포장 함수가 "
+"필요하다는 점도 유념해 주세요. "
 "Remember, in addition to the subgraph function we "
 "generated in the previous sections, we also need a wrapper function with "
 "a unified argument for TVM runtime to invoke and pass data. Fortunately, "
